// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component Have 0 pages renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    currentPage={0}
    pagesNumber={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "pagination nav justify-content-center",
    },
    "ref": null,
    "rendered": Array [],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "pagination nav justify-content-center",
      },
      "ref": null,
      "rendered": Array [],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Pagination component Have 2 pages renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    currentPage={2}
    pagesNumber={2}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="nav-item"
>
          <Link
                    className="nav-link"
                    replace={false}
                    to={
                              Object {
                                        "search": "?page=1",
                                      }
                    }
          >
                    1
          </Link>
</li>,
        <li
          className="nav-item nav-item_active"
>
          <Link
                    className="nav-link"
                    replace={false}
                    to={
                              Object {
                                        "search": "?page=2",
                                      }
                    }
          >
                    2
          </Link>
</li>,
      ],
      "className": "pagination nav justify-content-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": <Link
            className="nav-link"
            replace={false}
            to={
                        Object {
                                    "search": "?page=1",
                                  }
            }
>
            1
</Link>,
          "className": "nav-item",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": 1,
            "className": "nav-link",
            "replace": false,
            "to": Object {
              "search": "?page=1",
            },
          },
          "ref": null,
          "rendered": 1,
          "type": [Function],
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "host",
        "props": Object {
          "children": <Link
            className="nav-link"
            replace={false}
            to={
                        Object {
                                    "search": "?page=2",
                                  }
            }
>
            2
</Link>,
          "className": "nav-item nav-item_active",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": 2,
            "className": "nav-link",
            "replace": false,
            "to": Object {
              "search": "?page=2",
            },
          },
          "ref": null,
          "rendered": 2,
          "type": [Function],
        },
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="nav-item"
>
            <Link
                        className="nav-link"
                        replace={false}
                        to={
                                    Object {
                                                "search": "?page=1",
                                              }
                        }
            >
                        1
            </Link>
</li>,
          <li
            className="nav-item nav-item_active"
>
            <Link
                        className="nav-link"
                        replace={false}
                        to={
                                    Object {
                                                "search": "?page=2",
                                              }
                        }
            >
                        2
            </Link>
</li>,
        ],
        "className": "pagination nav justify-content-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="nav-link"
              replace={false}
              to={
                            Object {
                                          "search": "?page=1",
                                        }
              }
>
              1
</Link>,
            "className": "nav-item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": 1,
              "className": "nav-link",
              "replace": false,
              "to": Object {
                "search": "?page=1",
              },
            },
            "ref": null,
            "rendered": 1,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "host",
          "props": Object {
            "children": <Link
              className="nav-link"
              replace={false}
              to={
                            Object {
                                          "search": "?page=2",
                                        }
              }
>
              2
</Link>,
            "className": "nav-item nav-item_active",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": 2,
              "className": "nav-link",
              "replace": false,
              "to": Object {
                "search": "?page=2",
              },
            },
            "ref": null,
            "rendered": 2,
            "type": [Function],
          },
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
